--- a/.github/workflows/reusable-build.yml
+++ b/.github/workflows/reusable-build.yml
@@ -34,10 +34,11 @@ jobs:
         image_flavor:
           - main
           - nvidia
-          - asus
-          - asus-nvidia
-          - surface
-          - surface-nvidia
+          #- asus
+          #- asus-nvidia
+          #- surface
+          #- surface-nvidia
+          - t2
         base_name:
           - ${{ inputs.brand_name }}
           - ${{ inputs.brand_name }}-dx
