--- a/artifacthub-repo.yml
+++ b/artifacthub-repo.yml
@@ -1,7 +1,7 @@
-repositoryID: d93848a7-1ba3-446f-a556-8cba07a42167
+repositoryID: 
 owners: # (optional, used to claim repository ownership)
-  - name: Jorge Castro
-    email: jorge.castro@gmail.com
+  - name: 
+    email: 
 #ignore: # (optional, packages that should not be indexed by Artifact Hub)
 #  - name: package1
 #  - name: package2 # Exact match
